2000-05-29  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkclist.c (gtk_clist_column_titles_active): let you set the
	titles to be active, even if they aren't visible.

2000-05-21  Nils Barth  <nils_barth@post.harvard.edu>

	* gtkmenu.c:
	* gtkmenu.h:
	* gtktypeutils.h: Spelling/grammar fixes in comments.

Tue May 23 12:25:07 CEST 2000 lupus <lupus@debian.org>

	* gdk/nanox/*.h: add missing header files.

Fri May 19 11:52:59 2000  Tim Janik  <timj@gtk.org>

	* gtk/gtkdrawingarea.c (gtk_drawing_area_send_configure): set
	send_event to TRUE.
	(gtk_drawing_area_size): queue a resize.

Sun Mar 26 03:21:28 2000  Tim Janik  <timj@gtk.org>

        * gtk/gtksignal.c (gtk_signal_handlers_destroy): when unref-ing
        the handlers, also invalidate them. bug nailed down by Karl Nelson
        <kenelson@ece.ucdavis.edu>.

Fri May 19 06:49:23 2000  Tim Janik  <timj@gtk.org>

	* gtk/gtkfontsel.c (gtk_font_selection_get_font_name): handle
	"(nil)" foundries, patch from Grigorios Magklis.

	* gtk/gtkfontsel.c (gtk_font_selection_load_font): don't crash
	on non-available fonts, based on a patch by Grigorios Magklis
	<maglis@cs.rochester.edu>.

2000-05-18  Elliot Lee  <sopwith@redhat.com>

	* gdk/x11/gdkregion-generic.c: If a region does not have any
 	rectangles, or if the specified rectangle is not in the region, then return GDK_OVERLAP_RECTANGLE_OUT
	instead of GDK_OVERLAP_RECTANGLE_IN.

2000-05-17  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtklayout.c (gtk_layout_map): Remove references to
	OFFSCREEN, as it is no longer necessary.

Wed May 17 10:52:12 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcolorsel.c: Patch from David Santiago
	<mrcooger@cyberverse.com> to change things so that the 
	indicator of the active palette entry is done independently,
	not via the focus, since it should always be visible.

2000-05-17  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkevents-win32.c (gdk_event_translate): Plug same
	refcount leaks as in the X11 backend.
