@@ -2,6 +2,7 @@
 
 	* gtk/gtkclist.c (gtk_clist_column_titles_active): let you set the
 	titles to be active, even if they aren't visible.
+	(gtk_clist_column_titles_passive):  Ditto.
 
 2000-05-21  Nils Barth  <nils_barth@post.harvard.edu>
 
